# molecule-demo-monorepo

./: .ansible-lint  .gitmodules  .yamllint  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: test.yml
molecule/lint/: converge.yml  molecule.yml
molecule/oh-my-zsh/: INSTALL.rst  converge.yml  molecule.yml
molecule/oh-my-zsh/tests/: conftest.py  test_powerlevel10k.py  test_role.py  test_tmux.py  test_zsh.py
