[tool.poetry]
name = "molecule-demo-monorepo"
version = "0.1.0"
description = ""
authors = ["Jasstkn <jasssstkn@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
pytest-testinfra = "^6.1.0"
yamllint = "^1.26.0"
flake8 = "^3.8.4"
molecule-docker = "^0.3.3"
ansible = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
